<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.usuario.enrol.MainActivity">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Sichronize"
        android:orderInCategory="100"
        android:title="@string/action_Sichronize"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delte"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_Tabs"
        android:orderInCategory="100"
        android:title="@string/action_Tabs"
        app:showAsAction="never" />


</menu>
